k8s/overlays/local-https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mkjs-nginx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mkjs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mkjs-nginx
                port:
                  number: 80
  tls:
    - hosts:
        - mkjs.local
      secretName: mkjs-local-tls
